[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/WaterPipe.gd" type="Script" id=1]
[ext_resource path="res://assets/water_pipe.png" type="Texture" id=2]
[ext_resource path="res://assets/water_particle2.png" type="Texture" id=3]
[ext_resource path="res://scenes/FloatingPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/water_particle.png" type="Texture" id=5]
[ext_resource path="res://scenes/WaterFillContainer.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WaterFillContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -30, 160 ), Vector2( 30, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WaterFillContainer2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 160 ), Vector2( -16, 160 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("BottomSplashContainer/BottomSplashEmitter:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BottomSplashContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 460 ), Vector2( 0, 190 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainEmitter:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FloatingPlatform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.859, 458 ), Vector2( -1.859, 195 ) ]
}

[node name="WaterPipe" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Pipe" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="MainEmitter" type="CPUParticles2D" parent="."]
position = Vector2( 0, 110 )
z_index = -1
emitting = false
amount = 1000
lifetime = 3.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 16.0

[node name="FloatingPlatform" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 462.97 )
scale = Vector2( 0.7, 0.7 )
z_index = -1

[node name="BottomSplashContainer" type="Node2D" parent="."]
position = Vector2( 0, 460 )

[node name="BottomSplashEmitter" type="CPUParticles2D" parent="BottomSplashContainer"]
position = Vector2( 0, -2 )
amount = 64
lifetime = 0.2
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 28, 6 )
angular_velocity = 100.0
angular_velocity_random = 1.0

[node name="WaterFillContainer" parent="BottomSplashContainer" instance=ExtResource( 6 )]
position = Vector2( -30, 160 )

[node name="WaterFillContainer2" parent="BottomSplashContainer" instance=ExtResource( 6 )]
position = Vector2( 16, 160 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BottomSplashContainer"]
autoplay = "Default"
playback_speed = 0.1
anims/Default = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 2 )
